--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     ],
     "require": {
 		"php": "^8.2",
-        "brick/date-time": "^0.7.0"
+        "brick/date-time": "^0.7.0",
+        "brick/math": "^0.13.1"
 	},
 	"scripts": {
 		"test": "phpunit"
